--- a/AlgorithmTraining/AlgorithmTraining/AlgorithmTraining.vcxproj.filters
+++ b/AlgorithmTraining/AlgorithmTraining/AlgorithmTraining.vcxproj.filters
@@ -21,5 +21,14 @@
     <ClCompile Include="SockMerchant.cpp">
       <Filter>HackerRank\InterviewPack\Warm-up</Filter>
     </ClCompile>
+    <ClCompile Include="CountingValleys.cpp">
+      <Filter>HackerRank\InterviewPack\Warm-up</Filter>
+    </ClCompile>
+    <ClCompile Include="JumpingontheClouds.cpp">
+      <Filter>HackerRank\InterviewPack\Warm-up</Filter>
+    </ClCompile>
+    <ClCompile Include="RepeatedString.cpp">
+      <Filter>HackerRank\InterviewPack\Warm-up</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
